[package]
name = "libintern"
version = "0.6.0"
authors = ["iqbigbang <iqbigbang@gmail.com>"]
edition = "2018"
description = "A simple but correct library for interning arbitrary values."
license = "MIT"
documentation = "https://docs.rs/libintern"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
